update project, implement maintenance