@@ -1,15 +1,8 @@
 package com.tiger.apigateway.filters;
 
-import com.tiger.apigateway.constants.AppConstants;
-import com.tiger.apigateway.dtos.response.ApiResponse;
-import com.tiger.apigateway.services.IdentityService;
-import com.tiger.apigateway.utils.IpAddressUtil;
-import com.tiger.apigateway.utils.ObjectMapperUtil;
-import lombok.AccessLevel;
-import lombok.RequiredArgsConstructor;
-import lombok.experimental.FieldDefaults;
-import lombok.experimental.NonFinal;
-import lombok.extern.slf4j.Slf4j;
+import java.util.List;
+import java.util.UUID;
+
 import org.slf4j.MDC;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.cloud.gateway.filter.GatewayFilterChain;
@@ -24,10 +17,19 @@ import org.springframework.http.server.reactive.ServerHttpResponse;
 import org.springframework.stereotype.Component;
 import org.springframework.util.CollectionUtils;
 import org.springframework.web.server.ServerWebExchange;
-import reactor.core.publisher.Mono;
 
-import java.util.List;
-import java.util.UUID;
+import com.tiger.apigateway.constants.AppConstants;
+import com.tiger.apigateway.dtos.response.ApiResponse;
+import com.tiger.apigateway.services.IdentityService;
+import com.tiger.apigateway.utils.IpAddressUtil;
+import com.tiger.apigateway.utils.ObjectMapperUtil;
+
+import lombok.AccessLevel;
+import lombok.RequiredArgsConstructor;
+import lombok.experimental.FieldDefaults;
+import lombok.experimental.NonFinal;
+import lombok.extern.slf4j.Slf4j;
+import reactor.core.publisher.Mono;
 
 @Slf4j
 @Component
@@ -68,7 +70,7 @@ public class MaintenanceFilter implements GlobalFilter, Ordered {
             return chain.filter(newExchange);
         }
 
-        String appCode = clientSites.get(0);
+        String appCode = clientSites.getFirst();
         // Get token from authorization header
         return identityService
                 .getMaintenanceStatus(appCode)
@@ -76,7 +78,8 @@ public class MaintenanceFilter implements GlobalFilter, Ordered {
                     var data = introspectResponse.getData();
                     log.info("data: {}", data.getIsActive().toString());
                     // OFF maintenance
-                    if (Boolean.FALSE.equals(introspectResponse.getData().getIsActive())) return chain.filter(newExchange);
+                    if (Boolean.FALSE.equals(introspectResponse.getData().getIsActive()))
+                        return chain.filter(newExchange);
                     // ON maintenance
                     else return unauthenticated(exchange.getResponse());
                 })
